# aoc-2025

./: README.md  aoc2025.cabal  cabal.project
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  DayXY_template.hs  Main.hs
